# os-berttopics

./: .gitignore  README.md  pyproject.toml
berttopics/: dataset.py  main.py
berttopics/entities/: bert.py  vocab.py
